# cometh

./: .gitignore  33fix.txt  3I_ATLAS论文修改执行策略.docx  APJ_Appeal_Consultation_Report.tex  APJ_Review_Report.docx  APJ_Review_Report.tex  APJ_Review_Version_32.tex  APJ_Review_Version_33.tex  APJ审稿意见深度解读与应对指南.docx  APJ期刊审稿报告.txt  Atlas-27-fix.docx  Dockerfile  README.md  U3.TEX  apj_critical.txt  atlas27_out.txt  coverletter.txt  coverletter_mnras.tex  coverletter_mnras.txt  db01.tex  download_borisov.py  dsfixop.docx  dsfixop2.docx  environment.yml  fix31.docx  fix37.txt  fix38.txt  fix39.docx  fix39.txt  github.txt  main_application.tex  main_doubleblind (10) - 副本.tex  main_doubleblind (11) - 副本.tex  main_doubleblind (14) - 副本.tex  main_doubleblind (16) - 副本.tex  main_doubleblind (8).tex  main_doubleblind (9) - 副本.tex  main_methodology_only.tex  main_methodology_v10.tex  main_methodology_v11.tex  (+52 more)
.claude/: settings.local.json
Atlas-supplementary/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
Atlas-supplementary/configs/: dirty_params.yaml  hyperparams.yaml
Atlas-supplementary/data_generation/: __init__.py
Atlas-supplementary/docs/: COMETH_Capability_Statement.md  LAUNCH_CHECKLIST.md  outreach_templates.md
Atlas-supplementary/notebooks/: demo_workflow.ipynb
Atlas-supplementary/src/: __init__.py  cli.py  cnn_detection.py  domain_adapt.py  hard_constraints.py  ood_detector.py  pinn_inversion.py
Atlas-supplementary/weights/: README.md
FFP-pipeline/: README.md  requirements.txt
FFP-pipeline/data/: aperture_corrections.json  c09_sharpness_full.json  c09_snr_comparison.json  candidate_jitter_decomposition.json  coupled_mc_real_catalog.json  eight_detector_completeness.json  serpens_candidates.json  serpens_results.json  simbad_verification_full.json  yso_spectral_grid.json
FFP-pipeline/scripts/: ablation_experiment.py  c09_forced_4band.py  coupled_mc_real_catalog.py  (+5 more)
arxiv_submission/: main_arxiv.tex
data_generation/: generate_synthetic_data.py
relay/: cmd_queue.txt  monitor.sh  server_poll.sh
server/: generate_synthetic_data.py  train_cometh.py
src/: __init__.py  cnn_detection.py  hard_constraints.py  obs_optimizer.py
weights/: README.md
(+1 files in other folders)
