[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cometh"
version = "0.1.0"
description = "Deep learning pipeline for comet dust characterization — CNN detection, PINN inversion, OOD detection"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Zhilei Chen", email = "cometh@proton.me"}
]
keywords = ["astronomy", "comet", "deep-learning", "physics-informed", "interstellar-objects"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "astropy>=5.3.0",
    "scikit-learn>=1.3.0",
    "scikit-image>=0.21.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "photutils>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "pytest>=7.0",
    "black>=23.0",
]
training = [
    "tensorboard>=2.14.0",
]

[project.urls]
Homepage = "https://github.com/cometh-project/cometh"
Documentation = "https://github.com/cometh-project/cometh#readme"
Repository = "https://github.com/cometh-project/cometh"
Issues = "https://github.com/cometh-project/cometh/issues"

[project.scripts]
cometh-demo = "cometh.cli:demo"

[tool.setuptools]
# Install src/ as the "cometh" package.
# After `pip install cometh`, users do: from cometh import DetectionCNN
packages = ["cometh", "cometh.data_generation"]
package-dir = {"cometh" = "src", "cometh.data_generation" = "data_generation"}

[tool.setuptools.package-data]
cometh = ["../configs/*.yaml", "../weights/README.md"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
